--- a/sites/default/services.pantheon.preproduction.yml
+++ b/sites/default/services.pantheon.preproduction.yml
@@ -11,5 +11,10 @@
 # put here.
 #
 parameters:
+  session.storage.options:
+    gc_probability: 1
+    gc_divisor: 100
+    gc_maxlifetime: 200000
+    cookie_lifetime: 2000000
   twig.config:
     debug: true
